feat: extract ConfirmationModal component to abstarct the modals

--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -92,9 +92,13 @@
   </div>
 </div>
 
-<AuModal
+<ConfirmationModal
   @modalOpen={{this.showBlockOrganization}}
-  @closeModal={{toggle "showBlockOrganization" this}}
+  @onConfirm={{queue (perform this.blockOrganization) (toggle "showBlockOrganization" this)}}
+  @onCancel={{toggle "showBlockOrganization" this}}
+  @confirmMessage={{t "block-organization"}}
+  @alert={{true}}
+  @loading={{this.blockOrganization.isRunning}}
 >
   <:title>
     {{t "block-organization"}}
@@ -105,34 +109,15 @@
       <p>{{t "block-organization-are-you-sure" user=this.organizationBeingBlocked.name htmlSafe=true}}</p>
     </div>
   </:body>
-  <:footer>
-    <AuToolbar
-      as |Group|
-    >
-      <Group>
-        <AuButton
-          @skin="naked"
-          {{on "click" (toggle "showBlockOrganization" this)}}
-        >
-          {{t "cancel"}}
-        </AuButton>
-      </Group>
-      <Group>
-        <AuButton
-          @alert={{true}}
-          @loading={{this.blockOrganization.isRunning}}
-          {{on "click" (queue (perform this.blockOrganization) (toggle "showBlockOrganization" this))}}
-        >
-          {{t "block-organization"}}
-        </AuButton>
-      </Group>
-    </AuToolbar>
-  </:footer>
-</AuModal>
+</ConfirmationModal>
 
-<AuModal
+
+<ConfirmationModal
   @modalOpen={{this.showUnblockOrganization}}
-  @closeModal={{toggle "showUnblockOrganization" this}}
+  @onConfirm={{queue (perform this.unblockOrganization) (toggle "showUnblockOrganization" this)}}
+  @onCancel={{toggle "showUnblockOrganization" this}}
+  @confirmMessage={{t "unblock-organization"}}
+  @loading={{this.unblockOrganization.isRunning}}
 >
   <:title>
     {{t "unblock-organization"}}
@@ -143,27 +128,4 @@
       <p>{{t "unblock-organization-are-you-sure" user=this.organizationBeingBlocked.fullName htmlSafe=true}}</p>
     </div>
   </:body>
-  <:footer>
-    <AuToolbar
-      as |Group|
-    >
-      <Group>
-        <AuButton
-          @skin="naked"
-          {{on "click" (toggle "showUnblockOrganization" this)}}
-        >
-          {{t "cancel"}}
-        </AuButton>
-      </Group>
-      <Group>
-        <AuButton
-          @alert={{true}}
-          @loading={{this.unblockOrganization.isRunning}}
-          {{on "click" (queue (perform this.unblockOrganization) (toggle "showUnblockOrganization" this))}}
-        >
-          {{t "unblock-organization"}}
-        </AuButton>
-      </Group>
-    </AuToolbar>
-  </:footer>
-</AuModal>
+</ConfirmationModal>
