chore: disabled membership modal if nothing is selected

--- a/app/components/confirmation-modal.hbs
+++ b/app/components/confirmation-modal.hbs
@@ -36,6 +36,7 @@
           <Group>
             <AuButton
               @alert={{@alert}}
+              @disabled={{@disabled}}
               @loading={{@loading}}
               {{on "click" @onConfirm}}
             >
