--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -147,6 +147,7 @@
   @onCancel={{this.toggleShowBlockMembership}}
   @confirmMessage={{t "block-membership"}}
   @alert={{true}}
+  @disabled={{is-empty this.membershipsBeingBlocked}}
 >
   <:title>
     {{t "block-membership"}}
@@ -177,6 +178,7 @@
   @onConfirm={{queue this.unblockMemberships this.toggleShowUnblockMembership}}
   @onCancel={{this.toggleShowUnblockMembership}}
   @confirmMessage={{t "unblock-membership"}}
+  @disabled={{is-empty this.membershipsBeingBlocked}}
 >
   <:title>
     {{t "unblock-membership"}}
