KAS-3631 add waiting for status and change setting from template

--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -124,12 +124,12 @@
   <Auk::Modal @size="small">
     <Auk::Modal::Header
       @title={{t "documents-on-approved-agenda-title"}}
-      @onClose={{set this.isOpenVerifyUploadOnApproved false}}
+      @onClose={{set this "isOpenVerifyUploadOnApproved" false}}
     />
     <Auk::Modal::Body>
       <p>{{t "documents-on-approved-agenda-message"}}</p>
     </Auk::Modal::Body>
-    <Auk::Modal::Footer @onCancel={{set this.isOpenVerifyUploadOnApproved false}}>
+    <Auk::Modal::Footer @onCancel={{set this "isOpenVerifyUploadOnApproved" false}}>
       <Auk::Button
         @skin="primary"
         {{on "click" this.verifyUploadOnApproved}}
