fix: also rename component invocation

--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -36,7 +36,7 @@
             <td>
               <div>
                 <span class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
-                  <Settings::Organizations::MembershipsCount
+                  <OrganizationMembershipsCount
                     @organization={{organization}}
                   />
                 </span>
