--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -58,9 +58,11 @@
             <td class={{if organization.isBlocked "au-u-muted"}}>
               <div>
                 <span class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
-                  <Settings::Organizations::MembershipsCount
-                    @organization={{organization}}
-                  />
+                  <LinkTo @route="settings.users" @query={{hash organizations=(array organization.id)}}>
+                    <Settings::Organizations::MembershipsCount
+                      @organization={{organization}}
+                    />
+                  </LinkTo>
                 </span>
               </div>
             </td>
