KAS-3631 add a difference to message show if there is no next version

--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -127,6 +127,9 @@
       @onClose={{set this "isOpenVerifyUploadOnApproved" false}}
     />
     <Auk::Modal::Body>
+      {{#if this.currentAgenda.nextVersion}}
+        <p>{{t "documents-on-approved-agenda-with-next-version"}}</p>
+      {{/if}}
       <p>{{t "documents-on-approved-agenda-message"}}</p>
     </Auk::Modal::Body>
     <Auk::Modal::Footer @onCancel={{set this "isOpenVerifyUploadOnApproved" false}}>
