chore: load selected orgs and roles in tasks in users controller

--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -3,10 +3,14 @@
     <div class="auk-o-grid-col-2">
       <div class="au-o-box au-o-box--small au-o-flow au-o-flow--tiny au-u-padding-right-none">
         <div class="au-c-card au-o-box au-o-box--small">
-          <OrganizationFilter
-            @selected={{this.selectedOrganizations}}
-            @onChange={{this.setOrganizations}}
-          />
+          {{#if this.loadSelectedOrganizations.isRunning}}
+            <Auk::Loader />
+          {{else}}
+            <OrganizationFilter
+              @selected={{this.selectedOrganizations}}
+              @onChange={{this.setOrganizations}}
+            />
+          {{/if}}
         </div>
         <div class="au-c-card au-o-box au-o-box--small">
           <Auk::Label>{{t "filter-on-last-seen"}}</Auk::Label>
@@ -30,11 +34,15 @@
           </div>
         </div>
         <div class="au-c-card au-o-box au-o-box--small">
-          <UserRoleFilter
-            @selected={{this.selectedRoles}}
-            @onChange={{perform this.setRoles}}
-            @defaultEnableAllRoles={{is-empty this.selectedRoles}}
-          />
+          {{#if this.loadSelectedRoles.isRunning}}
+            <Auk::Loader />
+          {{else}}
+            <UserRoleFilter
+              @selected={{this.selectedRoles}}
+              @onChange={{perform this.setRoles}}
+              @defaultEnableAllRoles={{is-empty this.selectedRoles}}
+            />
+          {{/if}}
         </div>
         <div class="au-c-card au-o-box au-o-box--small">
           <Auk::Label>{{t "blocked-on"}}</Auk::Label>
