--- a/app/templates/cases/case/subcases/subcase.hbs
+++ b/app/templates/cases/case/subcases/subcase.hbs
@@ -9,7 +9,7 @@
   <Subcases::SubcaseHeader
     @subcase={{this.model}}
     @onMoveSubcase={{this.refreshSubcases}}
-    @onProposingSubcase={{this.refreshSubcases}}
+    @onProposedForAgenda={{this.refreshSubcases}}
   />
 </div>
 {{outlet}}
