--- a/app/components/cases/new-subcase.hbs
+++ b/app/components/cases/new-subcase.hbs
@@ -105,8 +105,8 @@
               {{t "edit"}}
             </Auk::Button>
           {{else}}
-            <Auk::Input
-              @block={{true}}
+            <AuInput
+              @width="block"
               @value={{this.subcaseName}}
               id="subcaseNameId"
             />
