--- a/app/components/agenda/agendaitem/create-agendaitem.hbs
+++ b/app/components/agenda/agendaitem/create-agendaitem.hbs
@@ -21,14 +21,14 @@
           <Auk::Toolbar @auto={{true}}>
             <Auk::Toolbar::Group @position="left">
               <Auk::Toolbar::Item class="auk-u-maximize-width">
-                <Auk::Input
+                <AuInput
+                  data-test-create-agendaitem-input={{true}}
                   @icon="search"
-                  @block={{true}}
+                  @width="block"
                   @value={{this.filterParam}}
+                  @disabled={{this.showPostponed}}
                   id="searchId"
                   placeholder={{t "search-placeholder"}}
-                  disabled={{this.showPostponed}}
-                  data-test-create-agendaitem-input={{true}}
                   {{on "input" (perform this.searchTask)}}
                 />
               </Auk::Toolbar::Item>
