--- a/app/components/agendaitem-press-edit.hbs
+++ b/app/components/agendaitem-press-edit.hbs
@@ -3,8 +3,8 @@
 <div class="auk-u-mb-4">
   <div class="auk-form-group">
     <Auk::Label>{{t "title"}}</Auk::Label>
-    <Auk::Input
-      @block={{true}}
+    <AuInput
+      @width="block"
       @value={{this.agendaitem.titlePress}}
     />
   </div>
