--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -16,9 +16,9 @@
           {{uppercase @piece.file.extension}}
         </p>
         <div class="au-u-flex au-u-flex--spaced-small">
-          <Auk::Input
+          <AuInput
             data-test-document-card-name-input={{true}}
-            @block={{true}}
+            @width="block"
             @value={{this.name}}
           />
           <AuButtonGroup class="au-u-flex--no-wrap">
