--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -59,18 +59,18 @@
           >
             {{t "year"}}
           </Auk::Label>
-          <Auk::Input
-            id="publicationReportsPublicationYear"
+          <AuInput
             @type="number"
-            @width="small"
             @value={{this.publicationYearAsString}}
-            {{!min/max does not prevent input of invalid year by typing}}
             @error={{not this.isPublicationYearValid}}
-            min={{this.publicationYearMin}}
-            max={{this.publicationYearMax}}
             {{on "focusout" this.loadMandateePersons}}
             {{on "focusout" (perform this.loadGovernmentDomains)}}
             {{on "change" (perform this.loadGovernmentDomains)}}
+            id="publicationReportsPublicationYear"
+            {{!min/max does not prevent input of invalid year by typing}}
+            min={{this.publicationYearMin}}
+            max={{this.publicationYearMax}}
+            class="auk-input-group--w-small" {{! TODO: replace `auk-input-group--w-small` with matching @width argument when it is implemented }}
           />
         </div>
       {{/if}}
