--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -3,14 +3,11 @@
     <div class="auk-o-grid-col-2">
       <div class="au-o-box au-o-box--small au-o-flow au-o-flow--tiny au-u-padding-right-none">
         <div class="au-c-card au-o-box au-o-box--small">
-          {{#if this.loadSelectedOrganizations.isRunning}}
-            <Auk::Loader />
-          {{else}}
-            <OrganizationFilter
-              @selected={{this.selectedOrganizations}}
-              @onChange={{this.setOrganizations}}
-            />
-          {{/if}}
+          <OrganizationFilter
+            @selected={{this.selectedOrganizations}}
+            @onChange={{this.setOrganizations}}
+          />
+        </div>
         </div>
       </div>
     </div>
