fix: only show the memberships that match the selected filters
The @action decorator looks a bit funky here because we're not really
using the function as an "action", in a sense, but we're really just
using the decorator for it's binding purposes. Otherwise the helper
loses the context and `this.roles` would be undefined.

--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -108,7 +108,7 @@
               </span>
             </td>
             <td class="au-o-flow au-o-flow--tiny">
-              {{#each user.memberships as |membership|}}
+              {{#each (this.filterMemberships user.memberships) as |membership|}}
                 <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small {{if membership.isBlocked "au-u-muted"}}">
                   <div>
                     <p class="au-u-muted au-u-h-functional">
@@ -128,7 +128,7 @@
             </td>
             <td data-test-route-settings-users-row-group>
               <div class="au-u-flex au-u-flex--column au-u-flex--spaced">
-                {{#each user.memberships as |membership|}}
+                {{#each (this.filterMemberships user.memberships) as |membership|}}
                   <p>{{membership.role.label}}</p>
                 {{/each}}
               </div>
