fix: add the missing filter to only show blocked organizations

--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -8,6 +8,13 @@
             @onChange={{this.setOrganizations}}
           />
         </div>
+        <div class="au-c-card au-o-box au-o-box--small">
+          <AuToggleSwitch
+            @label={{t "show-only-blocked"}}
+            @identifier="blocked"
+            @name="blocked"
+            @checked={{this.showBlockedOrganizations}}
+          />
         </div>
       </div>
     </div>
